Landing page project step-2

--- a/landing-page-project/html.html
+++ b/landing-page-project/html.html
@@ -52,40 +52,55 @@
     <!-- --main-- -->
 
     <main>
-
-    <!-- ----section----- -->
-    <section>
-      <!-- ----section-1---- -->
-      <div class="section-1">
+     <div class="overlay"></div>
+      <!-- ----section----- -->
+      <section>
+        <!-- ----section-1---- -->
+        <div class="section-1">
           <div class="box-1">
             <p class="h1-text">
               "In the pursuit of turning your dreams into reality !"
             </p>
           </div>
-          <div class="box-2"></div>
-      </div>
-      <!-- ----section-2----- -->
-      <div class="section-2"></div>
-    </section>
-    <!-- ---- aside ---  -->
-    <aside>
-      <div>
-        <div class="background-picture">
-          <img src="img/imgbin_globe-website-wireframe-sphere-wire-frame-model-png.png" alt="">
+          <div class="box-2">
+            <p class="des-text">
+              "Join our coding course and turn your dream of becoming a
+              programmer into reality. Gain expert guidance, practical skills,
+              and a clear path to success in the tech world. Your journey starts
+              here!"
+            </p>
+          </div>
         </div>
-      </div>
-    </aside>
-
-
-  </main>
+        <!-- ----section-2----- -->
+        <div class="section-2">
+          <div class="box-1">
+            <p class="text">
+              "Click the button below to start your journey to success!"
+            </p>
+          </div>
+          <div class="btn">
+            <button>Start !</button>
+          </div>
+        </div>
+      </section>
+      <!-- ---- aside ---  -->
+      <aside>
+        <div>
+          <div class="background-picture">
+            <img
+              src="img/imgbin_globe-website-wireframe-sphere-wire-frame-model-png.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </aside>
+    </main>
 
     <!-- --footer--- -->
 
     <footer>
-      
-    </footer>
 
-  
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/46e7282fd6.js"
