Comming soon page-2 - done

--- a/Comming-soon-page-2/index.html
+++ b/Comming-soon-page-2/index.html
@@ -32,10 +32,10 @@
         </p>
         <!-- countdown--- -->
         <div class="countdown">
-          <div class="time" id="day">324<span>Days</span></div>
-          <div class="time" id="hour">3<span>Minutes</span></div>
-          <div class="time" id="minute">5<span>Hours</span></div>
-          <div class="time" id="second">6<span>Seconds</span></div>
+          <div class="time" id="day"><span>Days</span></div>
+          <div class="time" id="hour"><span>Minutes</span></div>
+          <div class="time" id="minute"><span>Hours</span></div>
+          <div class="time" id="second"><span>Seconds</span></div>
         </div>
         <!-- ---notify-me-- -->
         <a href="#" class="n-box">Notify Me!</a>
@@ -70,6 +70,7 @@
           <input type="submit" value="Submit">
         </form>
       </div>
+      <img src="image/close.png" class="close">
     </div>
 
 
